--- a/backend/pornblocker-backend/src/main/resources/application.properties
+++ b/backend/pornblocker-backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:h2:mem:pornblockerdb
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+hibernate.jdbc.lob.non_contextual_creation = true
+spring.jpa.defer-datasource-initialization=true
