ポルノサイトのURLが取得できるようになった

--- a/backend/pornblocker-backend/src/main/resources/application.properties
+++ b/backend/pornblocker-backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:pornblockerdb
+spring.datasource.url=jdbc:h2:file:./data/pornblockerdb
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.h2.Driver
