--- a/backend/pornblocker-backend/build.gradle
+++ b/backend/pornblocker-backend/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     // https://mvnrepository.com/artifact/com.microsoft.playwright/playwright
     implementation group: 'com.microsoft.playwright', name: 'playwright', version: '1.24.1'
 
-
+    implementation("com.google.guava:guava:31.0.1-jre")
 }
 
 tasks.named('test') {
