--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^1.0.13",
+    "@types/chrome": "^0.0.193",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
