--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --config ./jest.config.json",
+    "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -15,6 +17,7 @@
   "devDependencies": {
     "@crxjs/vite-plugin": "^1.0.13",
     "@types/chrome": "^0.0.193",
+    "@types/jest": "^28.1.6",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
@@ -25,9 +28,11 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.30.1",
+    "jest": "^28.1.3",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.6.4",
     "vite": "^3.0.6"
   }
